# Copyright 2017 H2O.ai; Apache License Version 2.0
[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
ignore = E241,E265,E302,E303,E701,D105,D202
max-line-length = 80
import-order-style = smarkets
inline-quotes = "

[tool:pytest]
minversion = 3.0
norecursedirs = docs .cache .git
