[metadata]
license_file = LICENSE
description-file = README.md

[flake8]
ignore = E241,E265,E302,E303,E701,D105,D202
max-line-length = 80
import-order-style = smarkets
inline-quotes = "

[tool:pytest]
minversion = 3.0
norecursedirs = benchmarks build c ci docs microbench temp .benchmarks .cache .git .idea .venv
python_files = test_*.py bench_*.py
